complete core functionality

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     />
     <title>Inspirational Quote Generator</title>
     <link href="./styles.css" rel="stylesheet" />
+    <script src="./index.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <!-- Header -->
+    <header>
+      <!-- Navbar -->
+      <nav>
+        <h1>Mixed Messages</h1>
+      </nav>
+    </header>
+
+    <!-- Main -->
+    <main>
+      <section id="messageSection"></section>
+    </main>
+  </body>
 </html>
